# rqs

./: .gitignore  Cargo.toml  readme.md
python_sdk/: pyproject.toml  readme.md
python_sdk/pyrqs/: core.py
python_sdk/pyrqs/examples/: fanout_exchange.py  id_exchange.py  queueing.py
rqs/: Cargo.toml  build.rs
rqs/proto/: message.proto  queue.proto
rqs/src/: main.rs  message.rs  queue.rs  rqs.rs
rqs/src/message/: message.rs
rqs/src/queue/: queue.rs
rqs/src/rqs/: rqs_queue.rs  rqs_types.rs  rqs_utils.rs
src/: app_types.rs  exchange_api.rs  general_api.rs  main.rs  message_api.rs  queue_api.rs
src/exchange_api/: exchange.rs  request.rs
src/message_api/: request.rs
src/queue_api/: queue.rs  request.rs
