[package]
name = "rqs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-web = "0.10.2"
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
tonic = "0.10.2"
prost = "0.12"
serial_test = "2.0.0"
once_cell = "1.18.0"
futures = "0.3.28"

[build-dependencies]
tonic-build = "0.10"
